--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
   },
   "devDependencies": {
     "dotenv": "^0.4.0",
-    "gulp": "^3.8.6",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-jshint": "^1.11.2",
     "gulp-minify-css": "^0.3.7",
-    "gulp-sass": "^0.7.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.3.0",
     "gulp-util": "^3.0.0",
     "gulp-watch": "^0.6.8"
   }
